# Project4

./: Ising_Model.pro  README.md  functions.cpp  functions.h  main.cpp  plot_accepted_config.py  plot_accepted_vs_temperature.py  plot_equilibrium_20.py
Outputs/: 20x20_output.txt  2x2_output.txt  accept_ordered_10.txt  accept_ordered_24.txt  accept_random_10.txt  accept_random_24.txt  ordered_spin_10.txt  ordered_spin_24.txt  random_spin_10.txt  random_spin_24.txt
Parallelize/: CMakeLists.txt  README_md.md  functions.cpp  functions.h  main.cpp
